--- a/myrpcin-web/ant/build.xml
+++ b/myrpcin-web/ant/build.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <project name="myrpcin" default="build" basedir=".">
-    
+
 	<!-- full path of the app-engine java dev-kit -->
-	<property name="app-engine-file" 
+	<property name="app-engine-file"
 			  value="${com.google.appengine:appengine-java-sdk:zip}"/>
-	
+
 	<!-- stores the name of the file used to store the last classpath -->
 	<property name="last-classpath-file" value="target/last-classpath.txt"/>
 
 	<!-- stores the path to the generated build config file -->
-	<property name="build-config-file" 
+	<property name="build-config-file"
 			  value="target/classes/GeneratedBuildConfig.gwt.xml"/>
-	
-	<!-- 
+
+	<!--
 	  -	Initialization of the build script.  Sets properties, creates folders
-	  -	... etc 
+	  -	... etc
 	 -->
 	<target name="init">
-		<dirname property="app-engine-repo-dir" 
+		<dirname property="app-engine-repo-dir"
 				 file="${app-engine-file}"/>
-		<property name="app-engine-parent-dir" 
+		<property name="app-engine-parent-dir"
 				  value="${app-engine-repo-dir}/app-engine"/>
 		<property name="web-inf-lib" value="${war-directory}/WEB-INF/lib"/>
 		<property name="meta-inf-dir" value="${war-directory}/META-INF"/>
@@ -39,21 +39,21 @@
 	</target>
 
 	<!-- unzip app engine if it's not there already -->
-	<target name="unzip-app-engine" depends="app-engine-dir-check" 
+	<target name="unzip-app-engine" depends="app-engine-dir-check"
 			unless="${app-engine-dir-exists}">
-		<unzip src="${app-engine-file}" 
+		<unzip src="${app-engine-file}"
 			   dest="${app-engine-parent-dir}"/>
 	</target>
-    
-	<!-- 
-	  -	Makes sure that the app engine sdk is unzipped and fills a property 
+
+	<!--
+	  -	Makes sure that the app engine sdk is unzipped and fills a property
 	  -	with the path to the unzipped sdk
 	 -->
 	<target name="verify-app-engine" depends="unzip-app-engine">
-		<dirset id="app-engine-dir.set" dir="${app-engine-parent-dir}" 
+		<dirset id="app-engine-dir.set" dir="${app-engine-parent-dir}"
 				includes="*"/>
 
-		<pathconvert refid="app-engine-dir.set" 
+		<pathconvert refid="app-engine-dir.set"
 					 pathsep="${line.separator}"
 					 property="app-engine-dir"/>
 
@@ -78,18 +78,18 @@
 	</target>
 
 	<!-- set the app-engine-script property for a windows environment -->
-	<target name="set-app-engine-script-windows" 
+	<target name="set-app-engine-script-windows"
 			depends="detect-windows"
 			if="is-windows">
-		<property name="app-engine-script" 
+		<property name="app-engine-script"
 				  value="${app-engine-dir}/bin/appcfg.cmd"/>
 	</target>
 
 	<!-- set the app-engine-script property for a non-windows environment -->
-	<target name="set-app-engine-script-non-windows" 
+	<target name="set-app-engine-script-non-windows"
 			depends="detect-windows"
 			unless="is-windows">
-		<property name="app-engine-script" 
+		<property name="app-engine-script"
 				  value="${app-engine-dir}/bin/appcfg.sh"/>
 		<exec executable="chmod">
 			<arg line="755"/>
@@ -97,7 +97,7 @@
 		</exec>
 	</target>
 
-	<!-- 
+	<!--
 	  - Set the app engine script file to be the contents of the property,
 	  - app-engine-script
 	 -->
@@ -105,7 +105,7 @@
 			depends="set-app-engine-script-windows,set-app-engine-script-non-windows">
 	</target>
 
-	<!-- 
+	<!--
 	  - checks to see if the last-classpath.txt file exists.  If it does, then
 	  - the result is stored in the property called last-classpath-file-exists
 	 -->
@@ -115,7 +115,7 @@
 		</condition>
 	</target>
 
-	<!-- 
+	<!--
 	  - logical short circuit that sets the classpath-changed property to true
 	  - if the last-classpath file does not exist.  otherwise, nothing happens
 	 -->
@@ -125,7 +125,7 @@
 		<property name="classpath-changed" value="true"/>
 	</target>
 
-	<!-- 
+	<!--
 	  - Checks to see if the classpath has changed from the one stored in the
 	  - last-classpath.txt file.  The result is stored in the property called
 	  - classpath-changed
@@ -144,10 +144,10 @@
 	  - Copies the jars listed in the classpath to war's lib directory if the
 	  - classpath has changed since the last time this copy was done
 	 -->
-	<target name="copy-classpath-jars" 
+	<target name="copy-classpath-jars"
 			depends="check-classpath-changed"
 			if="classpath-changed">
-		
+
 		<copy todir="${web-inf-lib}" flatten="true">
 			<path>
 				<pathelement path="${project.classpath}"/>
@@ -158,7 +158,7 @@
 	</target>
 
 	<!-- copy the web and resources folders into the war directory -->
-	<target name="copy-war-dependencies" 
+	<target name="copy-war-dependencies"
 			depends="verify-app-engine,copy-classpath-jars">
 		<copy todir="${war-directory}" overwrite="true">
 			<fileset dir="src/main/web">
@@ -178,10 +178,10 @@
 	<!-- Full compile for automated pushing to app engine -->
 	<target name="gwtc-full" depends="verify-app-engine" if="gwt-full-compile">
 
-		<echo file="${build-config-file}" 
+		<echo file="${build-config-file}"
 			  message="&lt;module&gt;${full-build-config-module}&lt;/module&gt;"/>
 
-		<java failonerror="true" fork="true" 
+		<java failonerror="true" fork="true"
 			  classname="com.google.gwt.dev.Compiler">
 			<classpath>
 				<pathelement location="src/main/java"/>
@@ -205,14 +205,14 @@
 	</target>
 
 	<!-- Minimal compile for everyday local testing -->
-	<target name="gwtc-min" depends="verify-app-engine" 
+	<target name="gwtc-min" depends="verify-app-engine"
 			unless="gwt-full-compile">
 
 
-		<echo file="${build-config-file}" 
+		<echo file="${build-config-file}"
 			  message="&lt;module&gt;${min-build-config-module}&lt;/module&gt;"/>
 
-		<java failonerror="true" fork="true" 
+		<java failonerror="true" fork="true"
 			  classname="com.google.gwt.dev.Compiler">
 			<classpath>
 				<pathelement location="src/main/java"/>
@@ -224,6 +224,8 @@
 			<arg value="-XdisableCastChecking" />
 			<arg value="-draftCompile" />
 			<arg value="-strict"/>
+            <arg value="-logLevel"/>
+            <arg value="TRACE"/>
 			<arg value="-style"/>
 			<arg value="PRETTY"/>
 			<arg value="-war"/>
@@ -232,13 +234,13 @@
 		</java>
 
 	</target>
-	
-	<!-- 
+
+	<!--
 	  - This is called to generate the class and interface that bind the
-	  - presenter and the 
+	  - presenter and the
 	-->
 	<target name="generate-presenter-structure">
-		<java failonerror="true" fork="true" 
+		<java failonerror="true" fork="true"
 				classname="org.orgama.structure.App">
 			<classpath>
 				<pathelement path="${project.classpath}"/>
@@ -246,29 +248,29 @@
 			<arg line="target/classes"/>
 		</java>
 	</target>
-	
-	<!-- 
-	  - Target for compiling the gt portion of the project (either min or full) 
+
+	<!--
+	  - Target for compiling the gt portion of the project (either min or full)
 	  - and then copy this projects classes to the war-dir's classes dir
 	 -->
-	<target name="gwtc" 
-			depends="generate-presenter-structure,gwtc-min,gwtc-full" 
+	<target name="gwtc"
+			depends="generate-presenter-structure,gwtc-min,gwtc-full"
 			description="GWT compile to JavaScript">
 	</target>
 
 	<!-- update the debug argument if the jdpa address is there -->
 	<target name="set-debug-arg" if="jpda.address">
-		<property name="debug-arg" 
+		<property name="debug-arg"
 				  value="-Xrunjdwp:transport=dt_socket,server=n,address=127.0.0.1:${jpda.address}"/>
 		<echo>${debug-arg}</echo>
 	</target>
 
 	<!-- Start dev mode in normal (non-debug) mode -->
-	<target name="dev-mode-normal" 
+	<target name="dev-mode-normal"
 			depends="copy-war-dependencies,set-debug-arg"
 			unless="jpda.address">
-		
-		<java failonerror="true" fork="true" 
+
+		<java failonerror="true" fork="true"
 			  classname="com.google.gwt.dev.DevMode">
 			<classpath>
 				<pathelement location="src/main/java"/>
@@ -290,11 +292,11 @@
 	</target>
 
 	<!-- Start dev mode in debug mode -->
-	<target name="dev-mode-debug" 
+	<target name="dev-mode-debug"
 			depends="copy-war-dependencies,set-debug-arg"
 			if="jpda.address">
-		
-		<java failonerror="true" fork="true" 
+
+		<java failonerror="true" fork="true"
 			  classname="com.google.gwt.dev.DevMode">
 			<classpath>
 				<pathelement location="src/main/java"/>
@@ -318,8 +320,8 @@
 	</target>
 
 	<!-- Start Dev Mode -->
-	<target name="dev-mode" 
-			depends="dev-mode-debug,dev-mode-normal" 
+	<target name="dev-mode"
+			depends="dev-mode-debug,dev-mode-normal"
 			description="Run development mode">
 	</target>
 
@@ -329,25 +331,25 @@
 			<available file="${facebook-app-secret-file}" type="file"/>
 		</condition>
 	</target>
-	
+
 	<!-- Copy Facebook secret file if it exists to the META-INF folder -->
-	<target name="copy-facebook-secret-file" 
+	<target name="copy-facebook-secret-file"
 			depends="verify-facebook-secret-file"
 			if="facebook-secret-file-exists">
-		<copy file="${facebook-app-secret-file}" 
+		<copy file="${facebook-app-secret-file}"
 				  tofile="${meta-inf-dir}/facebook-app-secret-id.txt"/>
 	</target>
 
-	<!-- 
+	<!--
 	  - do the app engine deployment using the password stored in the password
-	  - file refered to by the password-file property.  This deployment method 
+	  - file refered to by the password-file property.  This deployment method
 	  - will be used if the password-file property exists regardless of whether
 	  - the password property exists
 	 -->
 	<target name="deploy-to-app-engine"
 			depends="set-app-engine-script,copy-war-dependencies,copy-facebook-secret-file">
-		
-		<exec executable="${app-engine-script}" 
+
+		<exec executable="${app-engine-script}"
 			  input="${password-file}">
 			<arg line="--enable_jar_splitting"/>
 			<arg line="--email=${email-address}"/>
