--- a/myrpcin-web/pom.xml
+++ b/myrpcin-web/pom.xml
@@ -97,6 +97,16 @@
 	  <artifactId>gwt-gae-channel</artifactId>
 	  <version>1.0-SNAPSHOT</version>
 	 </dependency>
+	 <dependency>
+	  <groupId>com.fasterxml.jackson.core</groupId>
+	  <artifactId>jackson-databind</artifactId>
+	  <version>2.0.6</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>in.myrpc</groupId>
+	  <artifactId>myrpcin-java-client</artifactId>
+	  <version>1.0-SNAPSHOT</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
