--- a/myrpcin-java-client/pom.xml
+++ b/myrpcin-java-client/pom.xml
@@ -16,12 +16,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.0.6</version>
@@ -32,9 +26,14 @@
             <version>14.0</version>
         </dependency>
         <dependency>
-            <groupId>edu.gvsu.cis.masl</groupId>
-            <artifactId>java-channels-api</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
         </dependency>
     </dependencies>
 </project>
